--- a/products/oeapi/branches/symnektra/plugin/oestore/oestore.vcproj
+++ b/products/oeapi/branches/symnektra/plugin/oestore/oestore.vcproj
@@ -60,7 +60,6 @@
 				RuntimeLibrary="1"
 				BrowseInformation="1"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -76,7 +75,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				RegisterOutput="true"
 				LinkLibraryDependencies="false"
 				AdditionalDependencies="comctl32.lib"
 				LinkIncremental="2"
@@ -151,7 +149,6 @@
 				RuntimeLibrary="1"
 				BrowseInformation="1"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
 			/>
 			<Tool
@@ -236,6 +233,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../../common"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;ENTERPRISE_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
+				WarningLevel="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -250,7 +248,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				RegisterOutput="true"
 				LinkLibraryDependencies="false"
 				ModuleDefinitionFile="./oestore.def"
 				SubSystem="2"
@@ -316,6 +313,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../../common"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;ENTERPRISE_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
+				WarningLevel="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -396,6 +394,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../../common"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;STANDARD_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
+				WarningLevel="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -410,7 +409,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				RegisterOutput="true"
 				LinkLibraryDependencies="false"
 				ModuleDefinitionFile="./oestore.def"
 				SubSystem="2"
@@ -476,6 +474,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../../common"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;STANDARD_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
+				WarningLevel="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -556,6 +555,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../../common"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;ENTERPRISE_VERSION;EVALUATION_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
+				WarningLevel="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -570,7 +570,6 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				RegisterOutput="true"
 				LinkLibraryDependencies="false"
 				ModuleDefinitionFile="./oestore.def"
 				SubSystem="2"
@@ -636,6 +635,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../../common"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;ENTERPRISE_VERSION;EVALUATION_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
+				WarningLevel="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -690,6 +690,10 @@
 			>
 			<File
 				RelativePath="folder.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\GetStoreInstance.cpp"
 				>
 			</File>
 			<File
@@ -842,6 +846,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\GetStoreInstance.h"
+				>
+			</File>
+			<File
 				RelativePath="manager.h"
 				>
 			</File>
@@ -875,9 +883,17 @@
 			</File>
 		</Filter>
 		<Filter
-			Name="Resource Files"
-			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe"
+			Name="Generated Files"
 			>
+			<File
+				RelativePath=".\OESTORE.h"
+				>
+			</File>
+			<File
+				RelativePath=".\OESTORE.htm"
+				DeploymentContent="true"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
