--- a/products/oeapi/branches/symnektra/plugin/oestore/oestore.vcproj
+++ b/products/oeapi/branches/symnektra/plugin/oestore/oestore.vcproj
@@ -26,7 +26,7 @@
 			UseOfMFC="0"
 			UseOfATL="1"
 			ATLMinimizesCRunTimeLibraryUsage="false"
-			CharacterSet="2"
+			CharacterSet="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -55,12 +55,11 @@
 				Optimization="0"
 				AdditionalIncludeDirectories="../../common"
 				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG;_USRDLL;PRINT_ERRORS;ENTERPRISE_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
-				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				BrowseInformation="1"
 				WarningLevel="3"
-				DebugInformationFormat="4"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -76,7 +75,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="comctl32.lib"
+				AdditionalDependencies="psapi.lib"
 				LinkIncremental="2"
 				ModuleDefinitionFile="./oestore.def"
 				GenerateDebugInformation="true"
@@ -205,7 +204,7 @@
 			UseOfMFC="0"
 			UseOfATL="1"
 			ATLMinimizesCRunTimeLibraryUsage="false"
-			CharacterSet="2"
+			CharacterSet="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -233,6 +232,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../../common"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;ENTERPRISE_VERSION;_USRDLL;WINVER=0x0500;_WIN32_WINNT=0x0500;"
+				RuntimeLibrary="0"
 				WarningLevel="3"
 			/>
 			<Tool
@@ -249,6 +249,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
+				AdditionalDependencies="psapi.lib"
 				ModuleDefinitionFile="./oestore.def"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -410,6 +411,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
+				AdditionalDependencies="psapi.lib"
 				ModuleDefinitionFile="./oestore.def"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -571,6 +573,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
+				AdditionalDependencies="psapi.lib"
 				ModuleDefinitionFile="./oestore.def"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
