--- a/products/oeapi/branches/symnektra/launcher/launcher.vcproj
+++ b/products/oeapi/branches/symnektra/launcher/launcher.vcproj
@@ -66,7 +66,6 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
-				Culture="0"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -77,8 +76,6 @@
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -224,6 +221,7 @@
 				AdditionalIncludeDirectories="../common"
 				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;ENTERPRISE_VERSION;EVALUATION_VERSION;;WINVER=0x0500;_WIN32_WINNT=0x0500;"
 				RuntimeLibrary="0"
+				WarningLevel="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -231,7 +229,6 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="0"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -240,8 +237,6 @@
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -378,6 +373,7 @@
 				AdditionalIncludeDirectories="../common"
 				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;STANDARD_VERSION;WINVER=0x0500;_WIN32_WINNT=0x0500;"
 				RuntimeLibrary="0"
+				WarningLevel="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -385,7 +381,6 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="0"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -394,8 +389,6 @@
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -540,7 +533,6 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="0"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -549,8 +541,6 @@
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="false"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -663,32 +653,20 @@
 				RelativePath="launcher.cpp"
 				>
 			</File>
-			<File
-				RelativePath="launcher.rc"
-				>
-			</File>
-			<File
-				RelativePath="..\common\oeapi_utils.cpp"
-				>
-			</File>
-			<File
-				RelativePath="StdAfx.cpp"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
-			<File
-				RelativePath="StdAfx.h"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
 			Filter="ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe"
 			>
+			<File
+				RelativePath="launcher.rc"
+				>
+			</File>
 			<File
 				RelativePath="oeapi.ico"
 				>
