<SVN message originally empty>
Exported from SVN r10653

--- a/products/oeapi/branches/symnektra/oeapicommon/oeapicommon.vcproj
+++ b/products/oeapi/branches/symnektra/oeapicommon/oeapicommon.vcproj
@@ -44,7 +44,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
@@ -105,7 +105,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -149,6 +149,26 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\msoeapi.idl"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCMIDLTool"
+						GenerateTypeLibrary="false"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCMIDLTool"
+						GenerateTypeLibrary="false"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath=".\nkt_lock.cpp"
 				>
 			</File>
@@ -187,6 +207,22 @@
 				>
 			</File>
 			<File
+				RelativePath=".\eval_utils.h"
+				>
+			</File>
+			<File
+				RelativePath=".\mimeole.h"
+				>
+			</File>
+			<File
+				RelativePath=".\msgtable.h"
+				>
+			</File>
+			<File
+				RelativePath=".\msoeapi.h"
+				>
+			</File>
+			<File
 				RelativePath=".\nkt_hook.h"
 				>
 			</File>
@@ -207,7 +243,31 @@
 				>
 			</File>
 			<File
+				RelativePath=".\oeapi_config.h"
+				>
+			</File>
+			<File
+				RelativePath=".\oeapi_event.h"
+				>
+			</File>
+			<File
+				RelativePath=".\oeapi_guids.h"
+				>
+			</File>
+			<File
+				RelativePath=".\oeapi_styles.h"
+				>
+			</File>
+			<File
 				RelativePath=".\oeapi_utils.h"
+				>
+			</File>
+			<File
+				RelativePath=".\oecom.h"
+				>
+			</File>
+			<File
+				RelativePath=".\oeundoc.h"
 				>
 			</File>
 			<File
@@ -224,10 +284,12 @@
 			</File>
 		</Filter>
 		<Filter
-			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
+			Name="Generated Files"
 			>
+			<File
+				RelativePath=".\msoeapi_h.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
